src/objects/CPO_Enrichment_Field_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>POI_Field_Api__c</fullName>
        <label>POI Field Api</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Token_Api__c</fullName>
        <label>Secondary Token Api</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Token_Source_Object__c</fullName>
        <label>Secondary Token Source Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <label>Source Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_API__c</fullName>
        <label>Token API</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CPO Enrichment Field Mapping</label>
    <pluralLabel>CPO Enrichment Field Mappings</pluralLabel>
</CustomObject>